@@ -7,3 +7,5 @@ Just dump whatever you want to have mentioned in the release notes here.
 
 The release team should empty this file after each release.
 
+The description key in [unit] should be unique, this key is used to avoid
+the recall duplication bug, which have been around for a while.
